# data-engineering-course

./: .gitignore  README.md  pyproject.toml  scrap_entry_point.py  upload_entry_point.py
src/bandsintown_scraper/: __init__.py  main.py
src/bandsintown_scraper/src/: constants.py  exceptions.py  scrap_multiple_pages.py  scrap_one_page.py  utils.py
src/bandsintown_uploader/: __init__.py  main.py
src/bandsintown_uploader/src/: constants.py  read.py  transform.py  upload.py
src/event_api/: README.md
src/event_api/app/: main.py  settings.py
src/event_api/app/db/: _config.py  fetch_events.py
src/event_api/app/routes/: __init__.py  get__all_events.py  get__events_by_weekday.py  get__search_events.py  pagination.py  put__update_artist_name.py  security.py
