[tool.poetry]
name = "data-engineering-course"
version = "0.3.0"
description = ""
authors = ["Xavier Lai <xavier.l@cabaia.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
google-cloud-storage = "^2.18.2"
geopy = "^2.4.1"
pandas = "^2.2.3"
pandas-gbq = "^0.23.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
google-auth = "^2.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
